aos animation update in portfolio section

--- a/index.html
+++ b/index.html
@@ -147,27 +147,27 @@
  -->
 					<!--new social media icon testing start  -->
 					<div class="wrapper">
-						<div class="icon facebook" data-aos="flip-up" data-aos-delay="1000">
+						<div class="icon facebook" data-aos="flip-up" data-aos-delay="1000" data-aos-once="true">
 							<div class="tooltip">Facebook</div>
 							<a href="https://facebook.com/ishraq.ahmed.14" target="_blank"><span><i class="fab fa-facebook-f"></i></span></a>
 						</div>
-						<div class="icon twitter" data-aos="flip-up" data-aos-delay="1200">
+						<div class="icon twitter" data-aos="flip-up" data-aos-delay="1200" data-aos-once="true">
 							<div class="tooltip">Twitter</div>
 							<a href="https://twitter.com/ahmed_ishraq" target="_blank"><span><i class="fab fa-twitter"></i></span></a>
 						</div>
-						<div class="icon instagram" data-aos="flip-up" data-aos-delay="1400">
+						<div class="icon instagram" data-aos="flip-up" data-aos-delay="1400" data-aos-once="true">
 							<div class="tooltip">Instagram</div>
 							<a href="https://instagram.com/ahmed_ishraq" target="_blank"><span><i class="fab fa-instagram"></i></span></a>
 						</div>	
-						<div class="icon github" data-aos="flip-up" data-aos-delay="1600">
+						<div class="icon github" data-aos="flip-up" data-aos-delay="1600" data-aos-once="true">
 							<div class="tooltip">Github</div>
 							<a href="https://github.com/ahmedishraq" target="_blank"><span><i class="fab fa-github"></i></span></a>
 						</div>
-						<div class="icon linkedin" data-aos="flip-up" data-aos-delay="1800">
+						<div class="icon linkedin" data-aos="flip-up" data-aos-delay="1800" data-aos-once="true">
 							<div class="tooltip">Linkedin</div>
 							<a href="http://linkedin.com/in/ishraq-ahmed-esha-244978172" target="_blank"><span><i class="fab fa-linkedin-in"></i></span></a>
 						</div>
-						<div class="icon cv" data-aos="flip-up" data-aos-delay="2000">
+						<div class="icon cv" data-aos="flip-up" data-aos-delay="2000" data-aos-once="true">
 							<div class="tooltip">Download&nbsp;CV</div>
 							<a href="https://drive.google.com/file/d/1CE9oWow79XBhrm5QUxYfvpyVE30aP1QY/view?usp=sharing" target="_blank"><span><i class="fas fa-file-download"></i></span></a>
 						</div>
@@ -469,7 +469,7 @@
                 	</div>
             	</div>
             	<div class="row portfolio-container">
-                	<div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
+                	<div class="col-lg-4 col-md-6 mb-4 portfolio-item first" data-aos="flip-right" data-aos-duration="3000">
                     	<div class="position-relative overflow-hidden mb-2">
                         	<img class="img-fluid rounded w-100" src="img/portfolio-1.jpg" alt="portfolio-1 picture">
                         	<div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
@@ -479,7 +479,7 @@
                         	</div>
                     	</div>
                 	</div>
-                	<div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
+                	<div class="col-lg-4 col-md-6 mb-4 portfolio-item second" data-aos="flip-down" data-aos-duration="3000">
                     	<div class="position-relative overflow-hidden mb-2">
                         	<img class="img-fluid rounded w-100" src="img/portfolio-2.jpg" alt="portfolio-2 picture">
                         	<div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
@@ -489,7 +489,7 @@
                         	</div>
                     	</div>
                 	</div>
-                	<div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+                	<div class="col-lg-4 col-md-6 mb-4 portfolio-item third" data-aos="flip-left" data-aos-duration="3000">
                     	<div class="position-relative overflow-hidden mb-2">
                         	<img class="img-fluid rounded w-100" src="img/portfolio-3.jpg" alt="portfolio-3 picture">
                         	<div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
@@ -499,7 +499,7 @@
                         	</div>
                     	</div>
                 	</div>
-                	<div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
+                	<div class="col-lg-4 col-md-6 mb-4 portfolio-item first" data-aos="flip-right" data-aos-duration="3000">
                     	<div class="position-relative overflow-hidden mb-2">
                         	<img class="img-fluid rounded w-100" src="img/portfolio-4.jpg" alt="portfolio-4 picture">
                         	<div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
@@ -509,7 +509,7 @@
                         	</div>
                     	</div>
                 	</div>
-                	<div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
+                	<div class="col-lg-4 col-md-6 mb-4 portfolio-item second" data-aos="flip-up" data-aos-duration="3000">
                     	<div class="position-relative overflow-hidden mb-2">
                         	<img class="img-fluid rounded w-100" src="img/portfolio-5.jpg" alt="portfolio-5 picture">
                         	<div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
@@ -519,7 +519,7 @@
                         	</div>
                     	</div>
                 	</div>
-                	<div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+                	<div class="col-lg-4 col-md-6 mb-4 portfolio-item third" data-aos="flip-left" data-aos-duration="3000">
                     	<div class="position-relative overflow-hidden mb-2">
                         	<img class="img-fluid rounded w-100" src="img/portfolio-6.jpg" alt="portfolio-6 picture">
                         	<div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
