--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
         			<h1 class="position-absolute text-uppercase text-primary">About Me</h1>
         		</div>
         		<div class="row align-items-center">
-        			<div class="col-lg-5 pb-4 pb-lg-0">
+        			<div class="col-lg-5 pb-4 pb-lg-0" data-aos="slide-right" data-aos-duration="3000">
         				<img class="img-fluid rounded w-100" src="img/new-1.jpg" alt="Ishraq">
         			</div>
-        			<div class="col-lg-7">
+        			<div class="col-lg-7" data-aos="slide-left" data-aos-duration="3000">
         				<h3 class="mb-4">Software Developer</h3>
   						<!-- About Typewriter start  -->
     					<p>Interested to work in the computer software industry alongside interested to work in Artificial Intelligence (AI) sector as well . Skilled in, OOP (Object Oriented Programming), JAVA, Python, Data Analysis, Data Visualization, Microsoft Office, Event Management, IT Strategy, and Problem Solving . Currently pursuing my undergrad degree with a Bachelor of Science - (B.Sc.) focused in Computer Science and Engineering (CSE) from BRAC University.</p>
