aos added in skill part

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         			<h1 class="position-absolute text-uppercase text-primary">My Skills</h1>
         		</div>
         		<div class="row align-items-center">
-        			<div class="col-md-6">
+        			<div class="col-md-6" data-aos="slide-right" data-aos-duration="3000">
         				<div class="skill mb-4">
         					<div class="d-flex justify-content-between">
         						<h6 class="font-weight-bold">JAVA</h6>
@@ -273,7 +273,7 @@
         					</div>
         				</div>
         			</div>
-        			<div class="col-md-6">
+        			<div class="col-md-6" data-aos="slide-left" data-aos-duration="3000">
         				<div class="skill mb-4">
         					<div class="d-flex justify-content-between">
         						<h6 class="font-weight-bold">AI/ Data Science/ Kaggle</h6>
