about section typewriter added

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         			<div class="col-lg-7" data-aos="slide-left" data-aos-duration="3000">
         				<h3 class="mb-4">Software Developer</h3>
   						<!-- About Typewriter start  -->
-    					<p>Interested to work in the computer software industry alongside interested to work in Artificial Intelligence (AI) sector as well . Skilled in, OOP (Object Oriented Programming), JAVA, Python, Data Analysis, Data Visualization, Microsoft Office, Event Management, IT Strategy, and Problem Solving . Currently pursuing my undergrad degree with a Bachelor of Science - (B.Sc.) focused in Computer Science and Engineering (CSE) from BRAC University.</p>
+    					<p id="typewriter"></p>
     					<!-- About Typewriter end -->
   							
         				<div class="row mb-3">
