--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
         						<h5 class="font-weight-bold mb-1">Bachelor of Scinece</h5>
         						<h6 class="font-weight-bold mb -1">in Computer Science and Engineering</h6>
-        						<p class="mb-2"><strong>BRAC University</strong> | <small>2019 - Current</small></p>
+        						<p class="mb-2"><strong>BRAC University</strong> | <small>2019 - Present</small></p>
         						<p>Pursuing my undergraduation degree in Computer Science and Engineering at BRAC University</p>
         					</div>
         					<div class="position-relative ex-me mb-4">
@@ -366,20 +366,26 @@
         				<div class="border-left border-primary pt-2 pl-4 ml-2">
         					<div class="position-relative ex-me mb-4">
         						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
+        						<h5 class="font-weight-bold mb-1">Student Mentor</h5>
+        						<p class="mb-2"><strong>Office of Academic Advising, BRAC University</strong> | <small>2021 - Present</small> | <small>Excellent</small></p>
+        						<p>In the FYAT (First Year Advising Year) program under the Office of Academic Advising (OAA), each new student is assigned to an FYAT Group. Each Group is led by a Faculty Advisor and Student Mentor.</p>
+        					</div>
+        					<div class="position-relative ex-me mb-4">
+        						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
         						<h5 class="font-weight-bold mb-1">Software and Control Developer, AI Contributer</h5>
-        						<p class="mb-2"><strong>BRACU Mongol - Tori</strong> | <small>2019 - Current</small> | <small>Excellent</small></p>
+        						<p class="mb-2"><strong>BRACU Mongol - Tori</strong> | <small>2019 - Present</small> | <small>Excellent</small></p>
         						<p>Developed software and control alongside contribute in Artificial Intilligence</p>
         					</div>
         					<div class="position-relative ex-me mb-4">
         						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
         						<h5 class="font-weight-bold mb-1">IT Consultant</h5>
-        						<p class="mb-2"><strong>Private Tax Firm</strong> | <small>2019 - Current </small> | <small>Excellent</small></p>
+        						<p class="mb-2"><strong>Private Tax Firm</strong> | <small>2019 - Present </small> | <small>Excellent</small></p>
         						<p>Consult all the IT facilites and data entry work alongside communication network perform for the client</p>
         					</div>
         					<div class="position-relative ex-me mb-4">
         						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
         						<h5 class="font-weight-bold mb-1">Assistant Director</h5>
-        						<p class="mb-2"><strong>Robotics Club of BRAC University</strong> | <small>2020 - Current</small> | <small>Excellent</small></p>
+        						<p class="mb-2"><strong>Robotics Club of BRAC University</strong> | <small>2020 - Present</small> | <small>Excellent</small></p>
         						<p>Maintain the IT facilities and communication work along side maintain the club database</p>
         					</div>
         				</div>
