update on hire button

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         					<div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">ishraqahmedbd@gmail.com</span></h6></div>
         					<div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">House# 35/1/B, Road# 3, Shyamoli, Dhaka-1207, Bangladesh</span></h6></div>
         				</div>
-        				<a href="#contact" class="btn blue btn-outline-primary mr-4">Hire Me</a>
+        				<button class="button-hire m-4" onclick="window.location.href='#contact';">Hire Me</button>
         				<button onclick="alert('This Page is under Development!')" class="btn btn-outline-primary">Learn More</button>
         			</div>
         		</div>
