--- a/index.html
+++ b/index.html
@@ -211,7 +211,8 @@
         					<div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">House# 35/1/B, Road# 3, Shyamoli, Dhaka-1207, Bangladesh</span></h6></div>
         				</div>
         				<button class="button-hire m-4" onclick="window.location.href='#contact';">Hire Me</button>
-        				<button onclick="alert('This Page is under Development!')" class="btn btn-outline-primary">Learn More</button>
+        				<!-- <button onclick="alert('This Page is under Development!')" class="btn btn-outline-primary">Learn More</button> -->
+        				<button class="btn btn-outline-primary"><a href="404_error.html" target="_blank">Learn more></a></button>
         			</div>
         		</div>
         	</div>
