--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         					<div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">4 Years</span></h6></div>
         					<div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">(+88) 01534741641</span></h6></div>
         					<div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">ishraqahmedbd@gmail.com</span></h6></div>
-        					<div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">House# 35/1/B, Road# 3, Shyamoli, Dhaka-1207, Bangladesh</span></h6></div>
+        					<div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">House# 31, Road# 3, Shyamoli, Dhaka-1207, Bangladesh</span></h6></div>
         				</div>
         				<button class="button-hire m-4" onclick="window.location.href='#contact';">Hire Me</button>
         				<button onclick="alert('This Page is under Development!')" class="btn btn-outline-primary">Learn More</button>
