--- a/index.html
+++ b/index.html
@@ -364,6 +364,12 @@
         			<div class="col-lg-6">
         				<h3 class="mb-4">My Experience</h3>
         				<div class="border-left border-primary pt-2 pl-4 ml-2">
+                            <div class="position-relative ex-me mb-4">
+                                <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
+                                <h5 class="font-weight-bold mb-1">Student Tutor & Data Analyst</h5>
+                                <p class="mb-2"><strong>Office of Academic Advising (OAA), BRAC University</strong> | <small>2021 - Present</small> | <small>Excellent</small></p>
+                                <p>In the FYAT (First Year Advising Year) program under the Office of Academic Advising (OAA), each new student is assigned to an FYAT Group. Each Group is led by a Faculty Advisor and Student Mentor.</p>
+                            </div>
         					<div class="position-relative ex-me mb-4">
         						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
         						<h5 class="font-weight-bold mb-1">Student Mentor</h5>
