minor experience update

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                                 <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
                                 <h5 class="font-weight-bold mb-1">Student Tutor & Data Analyst</h5>
                                 <p class="mb-2"><strong>Office of Academic Advising (OAA), BRAC University</strong> | <small>2022 - Present</small> | <small>Excellent</small></p>
-                                <p></p>
+                                <p>Student Tutors coordinate learning and provide tutoring in a group or individual setting. Act as referral agents for students struggling either academically or personally and ought to genuinely care about the requirements of the students.</p>
                             </div>
         					<div class="position-relative ex-me mb-4">
         						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
@@ -379,7 +379,7 @@
         					<div class="position-relative ex-me mb-4">
         						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
         						<h5 class="font-weight-bold mb-1">Software and Control Developer, AI Contributer</h5>
-        						<p class="mb-2"><strong>BRACU Mongol - Tori</strong> | <small>2019 - Present</small> | <small>Excellent</small></p>
+        						<p class="mb-2"><strong>BRACU Mongol - Tori</strong> | <small>2019 - 2021</small> | <small>Excellent</small></p>
         						<p>Developed software and control alongside contribute in Artificial Intilligence</p>
         					</div>
         					<div class="position-relative ex-me mb-4">
