alignment and minoir update in education experience section

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         			<h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Quality</h1>
         			<h1 class="position-absolute text-uppercase text-primary">Education & Experience</h1>
         		</div>
-        		<div class="row align-items-center">
+        		<div class="row align-items-relative">
         			<div class="col-lg-6">
         				<h3 class="mb-4">My Education</h3>
         				<div class="border-left border-primary pt-2 pl-4 ml-2">
@@ -368,7 +368,7 @@
                                 <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
                                 <h5 class="font-weight-bold mb-1">Student Tutor & Data Analyst</h5>
                                 <p class="mb-2"><strong>Office of Academic Advising (OAA), BRAC University</strong> | <small>2022 - Present</small> | <small>Excellent</small></p>
-                                <p>Student Tutors coordinate learning and provide tutoring in a group or individual setting. Act as referral agents for students struggling either academically or personally and ought to genuinely care about the requirements of the students by analysing their data besides, provide a report on that.</p>
+                                <p>Student Tutors coordinate learning and provide tutoring in a group or individual setting. Act as referral agents for students struggling either academically or personally and ought to genuinely care about the requirements of the students by analyzing their data besides, provide a report on that.</p>
                             </div>
         					<div class="position-relative ex-me mb-4">
         						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
