appreciation design update

--- a/index.html
+++ b/index.html
@@ -560,8 +560,8 @@
 		<div class="timeline body-timeline">
 			<div class="container-timeline left">
 				<div class="content-timeline">
-					<!-- <h3>Appreciation Certificate</h3> -->
-                    <h3><a class ="app" href="https://drive.google.com/drive/folders/1wyNFi4wHRBxlZdxPPd9UsCErnTnBFYE4">Appreciation Certificate</a></h3>
+                    <!-- <h3 class="hover-2"> <a class ="app" href="https://drive.google.com/drive/folders/1wyNFi4wHRBxlZdxPPd9UsCErnTnBFYE4">Appreciation Certificate</a></h3> -->
+                    <h3><a class ="app" href="https://drive.google.com/drive/folders/1wyNFi4wHRBxlZdxPPd9UsCErnTnBFYE4" target="_blank">Appreciation Certificate</a></h3>
 					<p></p>
 				</div>
 			</div>
