appreciation section update

--- a/index.html
+++ b/index.html
@@ -560,21 +560,17 @@
 		<div class="timeline body-timeline">
 			<div class="container-timeline left">
 				<div class="content-timeline">
-                    <!-- <h3 class="hover-2"> <a class ="app" href="https://drive.google.com/drive/folders/1wyNFi4wHRBxlZdxPPd9UsCErnTnBFYE4">Appreciation Certificate</a></h3> -->
                     <h3><a class ="app" href="https://drive.google.com/drive/folders/1wyNFi4wHRBxlZdxPPd9UsCErnTnBFYE4" target="_blank">Appreciation Certificate</a></h3>
-					<p></p>
 				</div>
 			</div>
 			<div class="container-timeline right">
 				<div class="content-timeline">
-					<h3>Co-Curricular Activities Certificate</h3>
-					<p></p>
+                    <h3><a class ="app" href="https://drive.google.com/drive/folders/1thLtdJPqyV8vHuyM5GElisXURN-_yK6v" target="_blank">Co-Curricular Activities Certificate</a></h3>
 				</div>
 			</div>
 			<div class="container-timeline left">
 				<div class="content-timeline">
-					<h3>Online Course Certificate</h3>
-					<p></p>
+                    <h3><a class ="app" href="https://drive.google.com/drive/folders/18htDNgeIdIuZmSkJjsLGQG5IBzWfZVHB" target="_blank">Online Course Certificate</a></h3>
 				</div>
 			</div>
 		</div>
