stack-overflow link added

--- a/index.html
+++ b/index.html
@@ -163,11 +163,15 @@
 							<div class="tooltip">Github</div>
 							<a href="https://github.com/ahmedishraq" target="_blank"><span><i class="fab fa-github"></i></span></a>
 						</div>
-						<div class="icon linkedin" data-aos="flip-up" data-aos-delay="1800" data-aos-once="true">
+						<div class="icon cv" data-aos="flip-up" data-aos-delay="1800" data-aos-once="true">
+							<div class="tooltip">Stack&nbsp;Overflow</div>
+							<a href="https://stackoverflow.com/users/12038717/ishraq-ahmed-esha" target="_blank"><span><i class="fab fa-stack-overflow"></i></span></a>
+						</div>
+						<div class="icon linkedin" data-aos="flip-up" data-aos-delay="2000" data-aos-once="true">
 							<div class="tooltip">Linkedin</div>
 							<a href="http://linkedin.com/in/ishraq-ahmed-esha-244978172" target="_blank"><span><i class="fab fa-linkedin-in"></i></span></a>
 						</div>
-						<div class="icon cv" data-aos="flip-up" data-aos-delay="2000" data-aos-once="true">
+						<div class="icon cv" data-aos="flip-up" data-aos-delay="2200" data-aos-once="true">
 							<div class="tooltip">Download&nbsp;CV</div>
 							<a href="https://drive.google.com/file/d/1olpBHfl8WKKQUI1ZWQK0kOEHrNjaHbM9/view?usp=sharing" target="_blank"><span><i class="fas fa-file-download"></i></span></a>
 						</div>
