--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
         						<h5 class="font-weight-bold mb-1">Bachelor of Scinece</h5>
         						<h6 class="font-weight-bold mb -1">in Computer Science and Engineering</h6>
-        						<p class="mb-2"><strong>BRAC University</strong> | <small>2019 - Present</small></p>
+        						<p class="mb-2"><strong>BRAC University</strong> | <small>Jan 2019 - May 2023</small></p>
         						<p>Pursuing my undergraduation degree in Computer Science and Engineering at BRAC University</p>
         					</div>
         					<div class="position-relative ex-me mb-4">
