--- a/index.html
+++ b/index.html
@@ -372,13 +372,13 @@
                             <div class="position-relative ex-me mb-4">
                                 <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
                                 <h5 class="font-weight-bold mb-1">Student Tutor & Data Analyst</h5>
-                                <p class="mb-2"><strong>Office of Academic Advising (OAA), BRAC University</strong> | <small>2022 - Present</small> | <small>Excellent</small></p>
+                                <p class="mb-2"><strong>Office of Academic Advising (OAA), BRAC University</strong> | <small>Sep 2022 - May 2023</small> | <small>Excellent</small></p>
                                 <p>Student Tutors coordinate learning and provide tutoring in a group or individual setting. Act as referral agents for students struggling either academically or personally and ought to genuinely care about the requirements of the students by analyzing their data besides, provide a report on that.</p>
                             </div>
         					<div class="position-relative ex-me mb-4">
         						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
         						<h5 class="font-weight-bold mb-1">Student Mentor</h5>
-        						<p class="mb-2"><strong>Office of Academic Advising (OAA), BRAC University</strong> | <small>2021 - Present</small> | <small>Excellent</small></p>
+        						<p class="mb-2"><strong>Office of Academic Advising (OAA), BRAC University</strong> | <small>Oct 2021 - May 2023</small> | <small>Excellent</small></p>
         						<p>In the FYAT (First Year Advising Year) program under the Office of Academic Advising (OAA), each new student is assigned to an FYAT Group. Each Group is led by a Faculty Advisor and Student Mentor.</p>
         					</div>
         					<div class="position-relative ex-me mb-4">
@@ -396,7 +396,7 @@
         					<div class="position-relative ex-me mb-4">
         						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
         						<h5 class="font-weight-bold mb-1">Assistant Director</h5>
-        						<p class="mb-2"><strong>Robotics Club of BRAC University</strong> | <small>2020 - Present</small> | <small>Excellent</small></p>
+        						<p class="mb-2"><strong>Robotics Club of BRAC University</strong> | <small>Aug 2021 - Feb 2023</small> | <small>Excellent</small></p>
         						<p>Maintain the IT facilities and communication work along side maintain the club database</p>
         					</div>
         				</div>
