--- a/index.html
+++ b/index.html
@@ -426,9 +426,9 @@
        				<div class="service-box col-lg-3 col-md-6 text-center mb-5" data-aos="slide-down" data-aos-duration="3000">
         				<div class="d-flex align-items-center justify-content-center mb-4">
         					<i class="fa fa-2x fa-chart-line service-icon bg-primary text-white mr-3"></i>
-        					<h4 class="font-weight-bold m-0">Data Entry</h4>
+        					<h4 class="font-weight-bold m-0">Data Analysis</h4>
        					</div>
-       					<p>Data entry with data manipulate and data visualize and gather the data for stroing and prepare to use those data for future</p>
+       					<p>Data analysis with data manipulate and data visualize and gather the data for stroing and prepare to use those data for future</p>
         				<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
         			</div>
        				<div class="service-box col-lg-4 col-md-6 text-center mb-5" data-aos="slide-left" data-aos-duration="3000">
@@ -442,9 +442,10 @@
         			<div class="service-box col-lg-4 col-md-6 text-center mb-5" data-aos="slide-right" data-aos-duration="3000">
         				<div class="d-flex align-items-center justify-content-center mb-4">
        						<i class="fa fa-2x fa-paste service-icon bg-primary text-white mr-3"></i>
-       						<h4 class="font-weight-bold m-0">Copy Writer</h4>
+       						<h4 class="font-weight-bold m-0">Machine Learning Project</h4>
        					</div>
         				<p>Copy a content for describing or presenting to others with destinguish design and user friendly overview</p>
+						<p>Develop machine learning (ML) model to solve problems/p>
         				<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
         			</div>
        				<div class="service-box col-lg-3 col-md-6 text-center mb-5" data-aos="slide-up" data-aos-duration="3000">
