--- a/index.html
+++ b/index.html
@@ -417,7 +417,8 @@
        			<div class="row pb-3">
        				<div class="service-box col-lg-4 col-md-6 text-center mb-5" data-aos="slide-right" data-aos-duration="3000">
        					<div class="d-flex align-items-center justify-content-center mb-4">
-       						<i class="fa fa-2x fa-laptop-code service-icon bg-primary text-white mr-3"></i>
+       						<!-- <i class="fa fa-2x fa-laptop-code service-icon bg-primary text-white mr-3"></i> -->
+							<i class="fa fa-2x fa-desktop service-icon bg-primary text-white mr-3"></i>
        						<h4 class="font-weight-bold m-0">Software Development</h4>
        					</div>
        					<p>Management Software focused with database and user friendly graphical user interface (GUI)</p>
@@ -441,16 +442,15 @@
         			</div>
         			<div class="service-box col-lg-4 col-md-6 text-center mb-5" data-aos="slide-right" data-aos-duration="3000">
         				<div class="d-flex align-items-center justify-content-center mb-4">
-       						<i class="fa fa-2x fa-paste service-icon bg-primary text-white mr-3"></i>
+       						<i class="fas fa-2x fa-brain service-icon bg-primary text-white mr-3"></i>
        						<h4 class="font-weight-bold m-0">Machine Learning Project</h4>
        					</div>
-        				<p>Copy a content for describing or presenting to others with destinguish design and user friendly overview</p>
-						<p>Develop machine learning (ML) model to solve problems/p>
+						<p>Develop machine learning (ML) model to solve problems</p>
         				<a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
         			</div>
        				<div class="service-box col-lg-3 col-md-6 text-center mb-5" data-aos="slide-up" data-aos-duration="3000">
        					<div class="d-flex align-items-center justify-content-center mb-4">
-       						<i class="fa fa-2x fa-robot service-icon bg-primary text-white mr-3"></i>
+       						<i class="fas fa-2x fa-robot service-icon bg-primary text-white mr-3"></i>
        						<h4 class="font-weight-bold m-0">Robotics Project</h4>
        					</div>
        					<p>Support for next gen industry changer or any kind of robotics project which is supported by a mixture of soft and harware with AI power</p>
