--- a/index.html
+++ b/index.html
@@ -369,6 +369,19 @@
         			<div class="col-lg-6">
         				<h3 class="mb-4">My Experience</h3>
         				<div class="border-left border-primary pt-2 pl-4 ml-2">
+							<div class="position-relative ex-me mb-4">
+                                <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
+                                <h5 class="font-weight-bold mb-1">Digital Solutions and Service Intern</h5>
+                                <p class="mb-2"><strong>Service Assurance Management (Technology Divison), Banglalink Digital Communications Ltd.</strong> | <small>Jun 2023 - Present</small> | <small>Excellent</small></p>
+								<ul>
+									<li>Coordinating ongoing activities of crucial lifeline services of Telecom: USSD, SMSC</li>
+									<li> Successfully maintaining operational excellence and 100% availability of the lifeline systems by performing regular 
+										heath checks, Change Management (CM) review, OS patching/version upgradation (according to InfoSec policies), user 
+										and business review audit</li>
+									<li> Successfully maintaining the VA-PT issue records with the third-party vendors</li>
+									<li> Continuous collaboration with team members and third-party vendors</li>
+								  </ul>
+                            </div>
                             <div class="position-relative ex-me mb-4">
                                 <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
                                 <h5 class="font-weight-bold mb-1">Student Tutor & Data Analyst</h5>
