Education description update

--- a/index.html
+++ b/index.html
@@ -348,7 +348,9 @@
         						<h5 class="font-weight-bold mb-1">Bachelor of Scinece</h5>
         						<h6 class="font-weight-bold mb -1">in Computer Science and Engineering</h6>
         						<p class="mb-2"><strong>BRAC University</strong> | <small>Jan 2019 - May 2023</small></p>
-        						<p>Pursuing my undergraduation degree in Computer Science and Engineering at BRAC University</p>
+        						<p>Major Coursework:  Data Structures, Algorithms, Neural Networks, Artificial Intelligence, Software Engineering, OOP, 
+									Database Systems, Operating Systems, Computer Architecture, Data Communication, Calculus, Android, Computer 
+									Networks</p>
         					</div>
         					<div class="position-relative ex-me mb-4">
         						<i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -35px; font-size: 22px;"></i>
