--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 		<meta content="Porfolio Website" name="keywords">
 		<meta content="Portfolio Website" name="description">
+
+<!-- 	Checking the environment page for deploying the page	 -->
 		
 		<!-- Favicon -- >
 		<link href="img/facicon.ico" rel="icon">
