--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 						</div>
 						<div class="icon cv" data-aos="flip-up" data-aos-delay="2200" data-aos-once="true">
 							<div class="tooltip">Download&nbsp;CV</div>
-							<a href="https://drive.google.com/file/d/19W36SNAf1MOEXSWbTy3ZBWooFQRC-7o5/view?usp=sharing" target="_blank"><span><i class="fas fa-file-download"></i></span></a>
+							<!-- <a href="https://drive.google.com/file/d/19W36SNAf1MOEXSWbTy3ZBWooFQRC-7o5/view?usp=sharing" target="_blank"><span><i class="fas fa-file-download"></i></span></a> -->
 						</div>
 					</div>	
 					<!-- new social media icon testing end -->
