--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         				<h3 class="text-white font-weight-normal mb-3">Hello, I am</h3>
         				<h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 4px #ffffff;">Ishraq Ahmed Esha</h1>
         				<h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1> 
-        				<div class="typed-text d-none">Software Developer, Competitive Programmer, Engineer, Critical Thinker, Problem Solver, Ethical Hacker, Backend Developer, Cyber Security Expert, Machine Learning Engineer, Artificial Intelligence Expert, Data Analyst</div>
+        				<div class="typed-text d-none">Software Engineer, Competitive Programmer, Software Quality Assurance Engineer, Critical Thinker, Problem Solver, Ethical Hacker, Backend Developer, Cyber Security Expert, Machine Learning Engineer, Artificial Intelligence Expert, Data Analyst</div>
         				<!--<div class="d-flex align-items-center justify-content-center justify-content-lg-startpt-5">
         					 <i class="fa fa-2x fa-download bg-primary text-white mr-1"></i>
         					<a href="https://drive.google.com/file/d/1kDrS3ijTN12mtLgEBJCzGwlBmswuJ7cP/view?usp=sharing" target="_blank" class="btn btn-white mr-4">Download CV</a>
